--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,15 +23,45 @@ set(
     Core/Inc
 )
 
+set(TestList)
+
 # Получение списка папок в заданном каталоге
 macro(__Get_DirectorytList result curdir)
     file(GLOB children RELATIVE ${curdir} ${curdir}/*)
     set(dirlist "")
     foreach(child ${children})
         if(IS_DIRECTORY ${curdir}/${child})
-            list(APPEND dirlist ${child})
+            
+
+            file(READ Components/${child}/CMakeLists.txt text)
+            string(REGEX MATCH "[D,d][e,E][p,P][e,E][n,N][d,D][s,S]_[o,O][n,N]\\([^\\n]*\\)" out_var ${text})
+            string(REGEX REPLACE "\"|\\(|\\)|[D,d][e,E][p,P][e,E][n,N][d,D][s,S]_[o,O][n,N]" "" out_var "${out_var}")
+
+            foreach(item ${out_var})
+                if (out_var)
+                    list(FIND dirlist "${out_var}" res)
+                    if (res GREATER_EQUAL 0)
+                        message("Dependence already included")
+                    else()
+                        message("Add new dependency \"${out_var}\"")
+                        list(APPEND dirlist "${out_var}")
+                    endif()
+                endif()
+                message("Result \"${out_var}\"")
+            endforeach()
+
+            list(FIND dirlist ${child} res)
+
+            if (res GREATER_EQUAL 0)
+                message("Component already included")
+            else()
+                message("Add new component \"${child}\"")
+                list(APPEND dirlist ${child})
+            endif()
+            
         endif()
     endforeach()
+    message("List final \"${dirlist}\"")
     set(${result} ${dirlist})
 endmacro()
 
