--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,18 +69,7 @@ endmacro()
 macro(__Get_IncludeDirectories result curdir)
     file(GLOB_RECURSE children ${curdir}/*.h ${curdir}/*.hpp)
     message("Adding include directories for \"${PROJECT_NAME}\"...")
-    set(dirlist "")
-    set(curItem "")
-    foreach(child ${children})
-        # Get current path
-        set(path ${child})
-        cmake_path(GET path PARENT_PATH newResult)
-        if (NOT curItem STREQUAL newResult)
-            message("Add \"${newResult}\" to icnlude directory list")
-            list(APPEND dirlist ${newResult})
-            set(curItem ${newResult})
-        endif()
-    endforeach()
+    get_property(dirlist DIRECTORY ${curdir} PROPERTY INCLUDE_DIRECTORIES)
     set(${result} ${dirlist})
 endmacro()
 
