--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ project(Template)
 # Переменная с именем исполняемого файла
 set(EXECUTABLE ${PROJECT_NAME})
 
+# Путь к проекту
+set(Project_Path ${CMAKE_CURRENT_SOURCE_DIR})
+
 # Язык C и C++
 enable_language(CXX C)
 
@@ -27,34 +30,14 @@ set(
 )
 
 # Получение списка компонентов в заданном каталоге
-macro(__Get_ComponentList result curdir)
+macro(__Get_DirectorytList result curdir)
     file(GLOB children RELATIVE ${curdir} ${curdir}/*)
     set(dirlist "")
     foreach(child ${children})
         if(IS_DIRECTORY ${curdir}/${child})
-            # Сортировка списка в соответствии с зависимостями
-            file(READ ${curdir}/${child}/CMakeLists.txt text)
-            # Find dependency function call
-            string(REGEX MATCHALL "[D,d][e,E][p,P][e,E][n,N][d,D][s,S]_[o,O][n,N]\\([^\\(]*\\)" out_var ${text})
-            # Remove all spaces near the breakets
-            string(REGEX REPLACE "\\([\r\n\t ]*|[\r\n\t ]*\\)" "" out_var "${out_var}")
-            # Remove quote marks and function name
-            string(REGEX REPLACE "\"|[D,d][e,E][p,P][e,E][n,N][d,D][s,S]_[o,O][n,N]" "" out_var "${out_var}")
-            # Convert to list
-            string(REPLACE "\n" ";" out_var "${out_var}")
-            foreach(item ${out_var})
-                list(INSERT dirlist 0 ${item})
-                message("Inserted dependency \"${item}\"")
-            endforeach()
-
-            list(FIND dirlist ${child} res)
+            # list(FIND dirlist ${child} res)
             message("Adding component \"${child}\"...")
-            if (res GREATER_EQUAL 0)
-                message("Component \"${child}\" already included by dependencies")
-            else()
-                list(APPEND dirlist ${child})
-            endif()
-            
+            list(APPEND dirlist ${child})
         endif()
     endforeach()
     message("Removing dublicates in component list...")
@@ -64,9 +47,25 @@ endmacro()
 
 # Получение списка каталогов с заголовочными файлами в заданной директории
 macro(__Get_IncludeDirectories result curdir)
-    file(GLOB_RECURSE children ${curdir}/*.h ${curdir}/*.hpp)
+    set(dirlist "")
     message("Adding include directories from dependency \"${curdir}\" to \"${PROJECT_NAME}\"...")
-    get_property(dirlist DIRECTORY ${curdir} PROPERTY INCLUDE_DIRECTORIES)
+    file(READ ${curdir}/CMakeLists.txt text)
+    # Find include directories call
+    string(REGEX MATCHALL "[I,i][n,N][c,C][l,L][u,U][d,D][e,E]_[d,D][i,I][r,R][e,E][c,C][t,T][o,O][r,R][i,I][e,E][s,S]\\([^\\(]*\\)" out_var ${text})
+    # Remove key word "include_directories"
+    string(REGEX REPLACE "[I,i][n,N][c,C][l,L][u,U][d,D][e,E]_[d,D][i,I][r,R][e,E][c,C][t,T][o,O][r,R][i,I][e,E][s,S]" "" out_var "${out_var}")
+    # Remove brackets and spaces"
+    string(REGEX REPLACE "\\([\r\n\t ]*|[\r\n\t ]*\\)" "" out_var "${out_var}")
+    # Remove quotes
+    string(REGEX REPLACE "\"" "" out_var "${out_var}")
+    # Convert to list
+    string(REGEX REPLACE "[\r,\n,\t, ][\r\n\t ]*" ";" out_var "${out_var}")
+    
+    foreach(item ${out_var})
+        # set(item ${curdir}/${item})
+        list(APPEND dirlist ${curdir}/${item})
+    endforeach()
+
     set(${result} ${dirlist})
 endmacro()
 
@@ -78,7 +77,7 @@ macro(__Get_SourceFiles result curdir)
 endmacro()
 
 # Получение списка компонентов проекта
-__Get_ComponentList(COMPONENT_LIST ${COMPONENTS_DIRECTORY})
+__Get_DirectorytList(COMPONENT_LIST ${COMPONENTS_DIRECTORY})
 
 message("Project components: \"${COMPONENT_LIST}\"")
 
@@ -86,13 +85,30 @@ message("Project components: \"${COMPONENT_LIST}\"")
 function(Depends_On name)
     message("Handle dependency \"${name}\" for \"${PROJECT_NAME}\"")
     set(dirs "")
-    __Get_IncludeDirectories(dirs ${COMPONENTS_DIRECTORY}/${name})
-    __Get_SourceFiles(src_files ${COMPONENTS_DIRECTORY}/${name})
-    target_include_directories(${PROJECT_NAME} PRIVATE ${dirs})
 
-    if (src_files)
-        target_link_libraries(${PROJECT_NAME} ${name})
+    # Get current path
+    set(path ${CMAKE_CURRENT_SOURCE_DIR})
+    # Put directory name to COMPONENT_NAME variable
+    cmake_path(GET path FILENAME COMPONENT_NAME)
+
+    if (NOT ${COMPONENT_NAME} STREQUAL ${name})
+        message("Test")
+        __Get_IncludeDirectories(dirs ${COMPONENTS_DIRECTORY}/${name})
+        __Get_SourceFiles(src_files ${COMPONENTS_DIRECTORY}/${name})
+        target_include_directories(${PROJECT_NAME} PRIVATE ${dirs})
+
+        if (src_files)
+            target_link_libraries(${PROJECT_NAME} ${name})
+        endif()
     endif()
+
+endfunction()
+
+# Указать зависимость от главного приложения
+function(Depends_On_Main)
+    message("Handle dependency \"Main app\" for \"${PROJECT_NAME}\"")
+    target_include_directories(${PROJECT_NAME} PUBLIC ${Project_Path}/${Includes})
+    Depends_All()
 endfunction()
 
 # Указать, что данный компонент зависит от всех остальных
